# DoublePendulum

./: .gitignore  CMakeLists.txt  pendulum.org
src/: Pendulum.cpp  Pendulum.h  ofApp.cpp  ofApp.h  segment.cpp  segment.h
